--- a/bin/build
+++ b/bin/build
@@ -6,6 +6,7 @@ env GOOS=linux GOARCH=arm64 go build -o build/kbackup-linux-arm64 cmd/kbackup/ma
 env GOOS=linux GOARCH=arm go build -o build/kbackup-linux-arm cmd/kbackup/main.go
 env GOOS=darwin GOARCH=amd64 go build -o build/kbackup-darwin-amd64 cmd/kbackup/main.go
 env GOOS=darwin GOARCH=arm64 go build -o build/kbackup-darwin-arm64 cmd/kbackup/main.go
-env GOOS=windows GOARCH=amd64 go build -o build/kbackup-windows-amd64 cmd/kbackup/main.go
-env GOOS=windows GOARCH=arm64 go build -o build/kbackup-windows-arm64 cmd/kbackup/main.go
-env GOOS=windows GOARCH=arm go build -o build/kbackup-windows-arm cmd/kbackup/main.go
+# TODO: Enable windows builds once we add native Go support for making links.
+# env GOOS=windows GOARCH=amd64 go build -o build/kbackup-windows-amd64 cmd/kbackup/main.go
+# env GOOS=windows GOARCH=arm64 go build -o build/kbackup-windows-arm64 cmd/kbackup/main.go
+# env GOOS=windows GOARCH=arm go build -o build/kbackup-windows-arm cmd/kbackup/main.go
