--- a/bin/build
+++ b/bin/build
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 set -eo pipefail
 
-LDFLAGS="-X $(bin/module)/internal.VERSION=$(bin/version)"
+LDFLAGS="-X $(bin/module)/internal/version.VERSION=$(bin/version)"
 
 env GOOS=linux GOARCH=amd64 go build -v -ldflags "$LDFLAGS" -o build/rincr-linux-amd64 cmd/rincr/main.go
 env GOOS=linux GOARCH=arm64 go build -v -ldflags "$LDFLAGS" -o build/rincr-linux-arm64 cmd/rincr/main.go
